<resources>
    <string name="app_name">TaskReporter</string>

    <string name="user_email">Enter Email</string>
    <string name="user_password">Enter Password</string>
    <string name="user_login">Login</string>
    <string name="user_register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_header">Task Reporter System</string>
    <string name="user_firstname">Firstname</string>
    <string name="user_lastname">Lastname</string>
    <string name="employee_id">Employee ID</string>
    <string name="add_image">Add Profile Image</string>

    <string name="field_fill_err">Please Fill this field.</string>
    <string name="email_err">Please Provide valid email.</string>
    <string name="password_err">Please Provide a password.</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="accounts_filter">
        <item>Filter Accounts</item>
        <item>Team Leaders</item>
        <item>Employees</item>
    </string-array>

</resources>
