<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_inner"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_firstname"
                android:inputType="text"
                android:hint="@string/user_firstname"
                android:background="@drawable/textinput"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_lastname"
                android:inputType="text"
                android:hint="@string/user_lastname"
                android:background="@drawable/textinput"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/employee_id"
                android:inputType="number"
                android:hint="@string/employee_id"
                android:background="@drawable/textinput"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_email"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:background="@drawable/textinput"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_password"
                android:inputType="textPassword"
                android:hint="@string/user_password"
                android:background="@drawable/textinput"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textColor="@color/icons"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/baseline_account_circle_black_48dp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:stretchColumns="*"
            android:orientation="horizontal">
            <TableRow>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/login"
                    android:text="@string/user_login"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/toast_color"
                    android:background="@drawable/buttons"/>


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register"
                    android:text="@string/user_register"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/toast_color"
                    android:background="@drawable/button_option_two"/>


            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>