<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_inner"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/task_reporter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_header"
                android:textColor="@color/icons"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_email"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:background="@drawable/textinput"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/user_password"
                android:inputType="textPassword"
                android:hint="@string/user_password"
                android:background="@drawable/textinput"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/request_password"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
        </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*"
        android:orientation="horizontal">
        <TableRow>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/user_login"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/toast_color"
                android:background="@drawable/buttons"/>


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="@string/user_register"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/toast_color"
                android:background="@drawable/button_option_two"/>


        </TableRow>
    </TableLayout>

</RelativeLayout>